# axum-mongodb

./: Cargo.toml
src/: db.rs  handler.rs  main.rs  route.rs  schema.rs
