[package]
name = "axum-mongo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
